# OrthoLoC

./: .gitignore  .gitmodules  README.md  croissant.json  index.html  main.css  pyproject.toml  test.py
docs/: index.html
docs/models/: L01_0343.ply  L01_0542.ply  L06_0310.ply  L09_0201.ply  L10_0036.ply  L16_0062.ply  L20_0172.ply  L24_0076.ply  L26_0157.ply
docs/static/css/: index.css
githubio/: index.html
githubio/models/: L01_0145.ply  L12_0052.ply  L18_0024.ply  L20_0051.ply
models/: L05_0347.ply  L17_0090.ply
ortholoc/: index.html
ortholoc/assets/demo/: urban_residential_DOP.tif  urban_residential_extrinsics.json  urban_residential_intrinsics.json
ortholoc/assets/raw/: urban_residential_xDOP.tif
ortholoc/benchmarking/: __init__.py  benchmark.py
ortholoc/correspondences/: Correspondences.py  Correspondences2D2D.py  Correspondences2D3D.py  __init__.py
ortholoc/dataset/: OrthoLoC.py  __init__.py
ortholoc/image_matching/: Matcher.py  MatcherGT.py  MatcherIMCUI.py  __init__.py  dense_matchers.yaml  feature_extractors.yaml  feature_matchers.yaml
ortholoc/scripts/: run_benchmark.py  run_localization.py  run_matching.py  visualize_dataset.py  visualize_sample.py
ortholoc/scripts/tmp/GT_0.5/: errors_samples_GT_poselib.txt  predictions_samples_GT_poselib.txt  samples_GT_poselib.json  summary_samples_GT_poselib.txt
ortholoc/utils/: __init__.py  geometry.py  image.py  io.py  metrics.py  misc.py  plot.py  pose.py
static/htmls/: overlay.html
